# dex-agg-tutorial

./: .env_example  .gitignore  README.md  pre-push.sh  pyproject.toml
dex_agg_tutorial/config/: settings.py  urls.py
dex_agg_tutorial/core/: models.py  queries.py  validation.py  views.py
dex_agg_tutorial/core/migrations/: 0001_initial.py
dex_agg_tutorial/core/tests/: sample_pairs.json  test_pricing.py
docs/: ANALYSIS.md  TUTORIAL.md
